# tgcrypto

./: Cargo.toml  README.md  install.sh  run-tests.php
.cargo/: config.toml
.github/workflows/: build.yml  php.yml  rust.yml
src/: lib.rs
tests/: test-001.php  test-002.php
